Started to rework the generator model. Splitted into a generator and an execution model. The execution model will be used by the machine-learning part as well. On the way, we changed some minor language aspects.